src/test/run-pass/explicit-i-suffix.rs
fn main() {
    let x: int = 8i;
    let y = 9i;
    x + y;

    let q: int = -8i;
    let r = -9i;
    q + r;
}
